Fixing scrollbar appearance bug

--- a/server/client/src/styles/ChatBox.css
+++ b/server/client/src/styles/ChatBox.css
@@ -17,7 +17,7 @@
 }
 
 .card-body-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
